hphp/hack/test/typecheck/require_strict.php
<?hh
echo(require('baz.php'));
